--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
         <h1>Willkommen im Regenbogenreich!</h1>
     </header>
     <nav>
-        Navigation
         <ul>
-            <li>Regenbogenreich kocht</li>
-            <li>Regenbogenreich Minecraft Server</li>
-            <li>Rainbow Racing</li>
-            <li>Regenbogenreich zockt</li>
-            <li>Regenbogenreich Technik</li>
+            <li><a href="#">Regenbogenreich kocht</a></li>
+            <li><a href="#">Regenbogenreich Minecraft Server</a></li>
+            <li><a href="#">Rainbow Racing</a></li>
+            <li><a href="#">Regenbogenreich zockt</a></li>
+            <li><a href="#">Regenbogenreich Technik</a></li>
         </ul>
     </nav>
 
