--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen im Regenbogenreich!</h1>
+        <h1>~ Regenbogenreich ~</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Kochen</a></li>
+                <li><a href="#">Minecraft-Server</a></li>
+                <li><a href="#">Rainbow Racing</a></li>
+                <li><a href="#">Zocken</a></li>
+                <li><a href="#">Technik</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#">Regenbogenreich kocht</a></li>
-            <li><a href="#">Regenbogenreich Minecraft Server</a></li>
-            <li><a href="#">Rainbow Racing</a></li>
-            <li><a href="#">Regenbogenreich zockt</a></li>
-            <li><a href="#">Regenbogenreich Technik</a></li>
-        </ul>
-    </nav>
 
     <main>
 
